# synesthetic-mcp

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG_v0.2.10.md  Dockerfile  Makefile  README.md  RESOLUTION.md  SUMMARY.md  dir-structure.txt  docker-compose.yml  down.sh  flake.nix  install.sh  integration.sh  notes.txt  pyproject.toml  pytest.ini  requirements.txt  serve.sh  setup.py  test.sh  test_e2e.sh  up.sh  validate.sh
.github/workflows/: ci.yml
docs/: get_schema_api.md  mcp_spec.md  process.md
examples/: labs_integration_example.py
mcp/: __init__.py  __main__.py  backend.py  core.py  diff.py  http_main.py  socket_main.py  stdio_main.py  tcp_main.py  transport.py  validate.py
meta/output/: mcp_prompt_cleanup.md  mcp_state.md
meta/prompts/: add AGENTS.md.json  add_adapter_tests.json  add_ci.json  add_path_tests.json  add_payload_tests.json  add_schema_reg.json  audit_mcp_state.json  finalize_docs.json  fix_ci.json  gap_fill.json  implement_loop.json  init_mcp_docker.json  init_mcp_repo.json  mcp_audit.json  mcp_patch.json  square_repo.json
tests/: conftest.py  test_backend.py  test_container.py  test_diff.py  test_entrypoint.py  test_env_discovery.py  test_golden.py  test_http.py  test_labs_integration.py  test_path_traversal.py  test_socket.py  test_stdio.py  test_submodule_integration.py  test_tcp.py  test_tools.py  test_validate.py
tests/fixtures/: e2e_golden.jsonl  golden.jsonl
tests/fixtures/examples/: AssetExample.json  InvalidExample.json  asset.invalid.json  asset.valid.json
tests/fixtures/schemas/: asset.schema.json
