[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synesthetic-mcp"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = { attr = "mcp.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp*"]

